postgres-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    name: postgres-pod
    app: demo-voting-app
spec:
  containers:
  - name: postgres
    image: postgres:9.4
    ports:
     - containerPort: 5432
    volumeMounts:
    - mountPath: /var/lib/postgresql/data
      name: postgredb
  volumes:
  - name: postgredb
    persistentVolumeClaim:
      claimName: postgres-pv-claim
