result-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    name: result-service
    app: demo-result-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
     name: result-app-pod
     app: demo-voting-app
