voting-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    name: voting-service
    app: demo-voting-app
spec:
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
  selector:
     name: voting-app-pod
     app: demo-voting-app
