ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting
spec:
  rules:
  - host: "voting.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: voting-service
            port:
              number: 80
  - host: "results.foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: result-service
            port:
              number: 80
